[gd_scene load_steps=4 format=3 uid="uid://5p1bp2kcs0py"]

[ext_resource type="Script" uid="uid://b17kvs73mjup8" path="res://demo/main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cpwp4xx6mv5p" path="res://demo/client_ui.tscn" id="2"]
[ext_resource type="Script" uid="uid://5tcyyp5nagrp" path="res://server/ws_webrtc_server.gd" id="3"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_left = 0.0136719
anchor_top = 0.0166667
anchor_right = 0.986328
anchor_bottom = 0.983333
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Signaling" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Signaling"]
layout_mode = 2
text = "Signaling server:"

[node name="Port" type="SpinBox" parent="VBoxContainer/Signaling"]
layout_mode = 2
min_value = 1025.0
max_value = 65535.0
value = 9080.0

[node name="ListenButton" type="Button" parent="VBoxContainer/Signaling"]
layout_mode = 2
toggle_mode = true
text = "Listen"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Signaling"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LinkButton" type="LinkButton" parent="VBoxContainer/Signaling/CenterContainer"]
modulate = Color(1, 0.956863, 0.207843, 1)
layout_mode = 2
text = "Make sure to download the GDExtension WebRTC Plugin and place it in the project folder"

[node name="Clients" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="ClientUI" parent="VBoxContainer/Clients" instance=ExtResource("2")]
layout_mode = 2

[node name="ClientUI2" parent="VBoxContainer/Clients" instance=ExtResource("2")]
layout_mode = 2

[node name="ClientUI3" parent="VBoxContainer/Clients" instance=ExtResource("2")]
layout_mode = 2

[node name="ClientUI4" parent="VBoxContainer/Clients" instance=ExtResource("2")]
layout_mode = 2

[node name="Server" type="Node" parent="."]
script = ExtResource("3")

[connection signal="toggled" from="VBoxContainer/Signaling/ListenButton" to="." method="_on_listen_toggled"]
[connection signal="pressed" from="VBoxContainer/Signaling/CenterContainer/LinkButton" to="." method="_on_LinkButton_pressed"]
